# digital-wallet

./: .gitignore  README.md  test-concurrent.sh
history-service/: Cargo.toml  README.md
history-service/migrations/: 20250122000001_create_transaction_events.sql
history-service/src/: consumer.rs  errors.rs  handlers.rs  main.rs  models.rs  repository.rs
scripts/: setup-kafka.sh  setup-postgres.sh  start-kafka.sh  stop-kafka.sh  test-service.sh
wallet-service/: .env.example  Cargo.toml
wallet-service/migrations/: 20250122000001_create_wallet_tables.sql
wallet-service/src/: errors.rs  handlers.rs  kafka.rs  main.rs  models.rs  repository.rs
wallet-service/tests/: wallet_operations.rs
