[package]
name = "history-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Database (same as wallet-service)
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "uuid",
    "migrate",
    "rust_decimal",
    "json"
] }

# Kafka consumer
rdkafka = { version = "0.36", features = ["tokio"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Money handling
rust_decimal = { version = "1.33", features = ["serde", "serde-with-str"] }

# UUIDs and Time
uuid = { version = "1.6", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config management
dotenvy = "0.15"
